--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "svelte-component-library",
-  "version": "0.2.0",
+  "name": "@erickruano/clerk-svelte",
+  "version": "0.0.1",
   "svelte": "src/index.js",
   "module": "dist/index.mjs",
   "main": "dist/index.js",
@@ -8,18 +8,12 @@
     "build": "rollup -c",
     "prepublishOnly": "npm run build",
     "test": "jest test",
-    "test:watch": "yarn test -- --watch",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "del-cli docs && build-storybook -c .storybook -o docs"
+    "test:watch": "yarn test -- --watch"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@rollup/plugin-node-resolve": "^6.0.0",
-    "@storybook/addon-actions": "^5.3.18",
-    "@storybook/addon-links": "^5.3.18",
-    "@storybook/addons": "^5.3.18",
-    "@storybook/svelte": "^5.3.18",
     "@testing-library/jest-dom": "^5.3.0",
     "@testing-library/svelte": "^3.0.0",
     "babel-jest": "^25.2.6",
