--- a/package.json
+++ b/package.json
@@ -1,38 +1,16 @@
 {
   "name": "@erickruano/clerk-svelte",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "svelte": "src/index.js",
-  "module": "dist/index.mjs",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "rollup -c",
-    "prepublishOnly": "npm run build",
-    "test": "jest test",
-    "test:watch": "yarn test -- --watch"
-  },
+  "scripts": {},
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
-    "@rollup/plugin-node-resolve": "^6.0.0",
-    "@testing-library/jest-dom": "^5.3.0",
-    "@testing-library/svelte": "^3.0.0",
-    "babel-jest": "^25.2.6",
-    "babel-loader": "^8.1.0",
-    "del-cli": "^3.0.0",
-    "jest": "^25.2.7",
-    "rollup": "^1.20.0",
-    "rollup-plugin-svelte": "^5.0.0",
-    "rollup-plugin-terser": "^5.3.0",
-    "svelte": "^3.20.1",
-    "svelte-jester": "^1.0.5",
-    "svelte-loader": "^2.13.6"
+    "svelte": "^3.20.1"
   },
   "keywords": [
     "svelte"
   ],
   "files": [
-    "src",
-    "dist"
+    "src"
   ],
   "dependencies": {}
 }
